# FireParticle

./: CMakeLists.txt  FireParticle.code-workspace  main.cpp
src/: Particle.cpp  Particle.h  Screen.cpp  Screen.h  Swarm.cpp  Swarm.h  main.cpp
